# stellar-armada

./: .gitignore  README.md  main.py  pyproject.toml
app/: commands.py  game_state.py  run.py
app/assets/levels/: level1.json
app/engine/: __init__.py  engine.py  player.py  point.py  ship.py  weapons.py
app/level/: level.py
app/scenes/: base.py  game.py  game_over.py  main_menu.py
app/sprites/: groups.py  ship.py
app/ui/: base.py  button.py  label.py  menu.py  minimap.py  panel.py
app/utils/: config.py  constants.py  converter.py  math.py  menu_item.py  point_converter.py  screen_point.py
tests/unit/engine/: test_engine.py
