[tool.poetry]
name = "stellar-armada"
version = "0.1.0"
description = ""
authors = ["alex-korzh <alex@korzh.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pygame-ce = "^2.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
